--- a/WeatherMobileApp/package.json
+++ b/WeatherMobileApp/package.json
@@ -9,8 +9,7 @@
   },
   "dependencies": {
     "react": "15.4.2",
-    "react-native": "0.41.2",
-    "react-native-device-uuid": "^1.2.0"
+    "react-native": "0.41.2"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
